<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>RoundWindow</class>
 <widget class="QMainWindow" name="RoundWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>525</width>
    <height>558</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Wordle</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout">
      <property name="sizeConstraint">
       <enum>QLayout::SetNoConstraint</enum>
      </property>
      <item>
       <spacer name="horizontalSpacer">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <widget class="QLabel" name="label">
        <property name="text">
         <string>Wordle</string>
        </property>
       </widget>
      </item>
      <item>
       <spacer name="horizontalSpacer_2">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>40</width>
          <height>20</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QScrollArea" name="scrollArea">
      <property name="widgetResizable">
       <bool>true</bool>
      </property>
      <widget class="QWidget" name="scrollAreaWidgetContents">
       <property name="geometry">
        <rect>
         <x>0</x>
         <y>0</y>
         <width>505</width>
         <height>373</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_2">
        <item>
         <layout class="QHBoxLayout" name="horizontalLayoutGuesses">
          <item>
           <spacer name="horizontalSpacer_3">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>239</width>
              <height>20</height>
             </size>
            </property>
           </spacer>
          </item>
          <item>
           <layout class="QGridLayout" name="gridLayoutBox">
            <property name="sizeConstraint">
             <enum>QLayout::SetMinAndMaxSize</enum>
            </property>
           </layout>
          </item>
          <item>
           <spacer name="horizontalSpacer_4">
            <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
            <property name="sizeHint" stdset="0">
             <size>
              <width>238</width>
              <height>20</height>
             </size>
            </property>
           </spacer>
          </item>
         </layout>
        </item>
        <item>
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
          <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>307</height>
           </size>
          </property>
         </spacer>
        </item>
       </layout>
      </widget>
     </widget>
    </item>
    <item>
     <layout class="QHBoxLayout" name="horizontalLayout_3">
      <property name="sizeConstraint">
       <enum>QLayout::SetNoConstraint</enum>
      </property>
      <item>
       <spacer name="horizontalSpacer_5">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>13</width>
          <height>86</height>
         </size>
        </property>
       </spacer>
      </item>
      <item>
       <layout class="QGridLayout" name="gridLayoutKey">
        <property name="sizeConstraint">
         <enum>QLayout::SetMaximumSize</enum>
        </property>
        <item row="2" column="2">
         <widget class="Key" name="toolButton_S">
          <property name="text">
           <string>S</string>
          </property>
         </widget>
        </item>
        <item row="0" column="4">
         <widget class="Key" name="toolButton_E">
          <property name="text">
           <string>E</string>
          </property>
         </widget>
        </item>
        <item row="3" column="8">
         <widget class="Key" name="toolButton_N">
          <property name="text">
           <string>N</string>
          </property>
         </widget>
        </item>
        <item row="0" column="1">
         <widget class="Key" name="toolButton_Q">
          <property name="text">
           <string>Q</string>
          </property>
         </widget>
        </item>
        <item row="0" column="8">
         <widget class="Key" name="toolButton_U">
          <property name="text">
           <string>U</string>
          </property>
         </widget>
        </item>
        <item row="2" column="7">
         <widget class="Key" name="toolButton_H">
          <property name="text">
           <string>H</string>
          </property>
         </widget>
        </item>
        <item row="0" column="7">
         <widget class="Key" name="toolButton_Y">
          <property name="text">
           <string>Y</string>
          </property>
         </widget>
        </item>
        <item row="0" column="5">
         <widget class="Key" name="toolButton_R">
          <property name="text">
           <string>R</string>
          </property>
         </widget>
        </item>
        <item row="2" column="6">
         <widget class="Key" name="toolButton_G">
          <property name="text">
           <string>G</string>
          </property>
         </widget>
        </item>
        <item row="0" column="6">
         <widget class="Key" name="toolButton_T">
          <property name="text">
           <string>T</string>
          </property>
         </widget>
        </item>
        <item row="0" column="2">
         <widget class="Key" name="toolButton_W">
          <property name="text">
           <string>W</string>
          </property>
         </widget>
        </item>
        <item row="3" column="5">
         <widget class="Key" name="toolButton_C">
          <property name="text">
           <string>C</string>
          </property>
         </widget>
        </item>
        <item row="3" column="9">
         <widget class="Key" name="toolButton_M">
          <property name="text">
           <string>M</string>
          </property>
         </widget>
        </item>
        <item row="3" column="4">
         <widget class="Key" name="toolButton_X">
          <property name="text">
           <string>X</string>
          </property>
         </widget>
        </item>
        <item row="0" column="11">
         <widget class="Key" name="toolButton_P">
          <property name="text">
           <string>P</string>
          </property>
         </widget>
        </item>
        <item row="2" column="5">
         <widget class="Key" name="toolButton_F">
          <property name="text">
           <string>F</string>
          </property>
         </widget>
        </item>
        <item row="2" column="10">
         <widget class="Key" name="toolButton_L">
          <property name="text">
           <string>L</string>
          </property>
         </widget>
        </item>
        <item row="0" column="12">
         <widget class="QPushButton" name="pushButton_Del">
          <property name="text">
           <string>Del</string>
          </property>
         </widget>
        </item>
        <item row="2" column="1">
         <widget class="Key" name="toolButton_A">
          <property name="text">
           <string>A</string>
          </property>
         </widget>
        </item>
        <item row="2" column="4">
         <widget class="Key" name="toolButton_D">
          <property name="text">
           <string>D</string>
          </property>
         </widget>
        </item>
        <item row="3" column="7">
         <widget class="Key" name="toolButton_B">
          <property name="text">
           <string>B</string>
          </property>
         </widget>
        </item>
        <item row="3" column="2">
         <widget class="Key" name="toolButton_Z">
          <property name="text">
           <string>Z</string>
          </property>
         </widget>
        </item>
        <item row="3" column="6">
         <widget class="Key" name="toolButton_V">
          <property name="text">
           <string>V</string>
          </property>
         </widget>
        </item>
        <item row="0" column="9">
         <widget class="Key" name="toolButton_I">
          <property name="text">
           <string>I</string>
          </property>
         </widget>
        </item>
        <item row="2" column="8">
         <widget class="Key" name="toolButton_J">
          <property name="text">
           <string>J</string>
          </property>
         </widget>
        </item>
        <item row="2" column="9">
         <widget class="Key" name="toolButton_K">
          <property name="text">
           <string>K</string>
          </property>
         </widget>
        </item>
        <item row="0" column="10">
         <widget class="Key" name="toolButton_O">
          <property name="text">
           <string>O</string>
          </property>
         </widget>
        </item>
        <item row="2" column="12" rowspan="2">
         <widget class="QPushButton" name="pushButton_Enter">
          <property name="text">
           <string>Enter</string>
          </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
       <spacer name="horizontalSpacer_6">
        <property name="orientation">
         <enum>Qt::Horizontal</enum>
        </property>
        <property name="sizeHint" stdset="0">
         <size>
          <width>13</width>
          <height>86</height>
         </size>
        </property>
       </spacer>
      </item>
     </layout>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>525</width>
     <height>21</height>
    </rect>
   </property>
   <widget class="QMenu" name="menuOptions">
    <property name="title">
     <string>Options</string>
    </property>
    <addaction name="actionGive_Up"/>
    <addaction name="actionReset_Round"/>
    <addaction name="separator"/>
    <addaction name="actionCheat"/>
    <addaction name="actionHint"/>
   </widget>
   <addaction name="menuOptions"/>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
  <action name="actionGive_Up">
   <property name="text">
    <string>Give Up</string>
   </property>
  </action>
  <action name="actionReset_Round">
   <property name="text">
    <string>Reset Round</string>
   </property>
  </action>
  <action name="actionCheat">
   <property name="text">
    <string>Cheat</string>
   </property>
  </action>
  <action name="actionHint">
   <property name="text">
    <string>Hint</string>
   </property>
  </action>
 </widget>
 <customwidgets>
  <customwidget>
   <class>Key</class>
   <extends>QToolButton</extends>
   <header>key.h</header>
  </customwidget>
 </customwidgets>
 <resources/>
 <connections/>
</ui>
